--- a/index.html
+++ b/index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
+  <link rel="preload" href="fonts/lobster-v28-latin_cyrillic-regular.woff2" as="font" crossorigin>
   <link rel="icon" type="image/svg+xml" href="img/logo.svg">
   <link rel="icon" type="image/png" href="img/favicon.png">
   
   <title>Помодоро</title>
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
+
+  <script src="js/index.js" type="module"></script>
 </head>
 
 <body>
@@ -61,8 +64,6 @@
       <p class="count_text">Кол-во помодорок</p>
     </div>
   </div>
-
-  <script src="js/index.js" type="module"></script>
 </body>
 
 </html>
